mini batch gradient descent

--- a/cost-function_and_loss/costfunction_and_loss.ipynb
+++ b/cost-function_and_loss/costfunction_and_loss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,15 +20,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:blue'>Implement Mean Absolute Error</h3>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -63,7 +56,7 @@
        "0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,24 +66,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Implement same thing using numpy in much easier way**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.5, 0.5, 0. , 0. , 0.3])"
+       "array([0.7, 0.3, 1. , 0. , 0.5])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.26"
+       "0.5"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -139,10 +125,10 @@
     {
      "data": {
       "text/plain": [
-       "0.26"
+       "0.5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,22 +138,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:blue'>Implement Log Loss or Binary Cross Entropy</h3>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-79-faee82fd9f21>:1: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_7856\\262464415.py:1: RuntimeWarning: divide by zero encountered in log\n",
       "  np.log([0])\n"
      ]
     },
@@ -177,7 +156,7 @@
        "array([-inf])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +185,7 @@
        "array([-34.53877639])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +205,7 @@
        "array([1, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +227,7 @@
        "[1, 1, 1e-15, 1e-15, 1]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +248,7 @@
        "0.999999999999999"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +268,7 @@
        "[0.999999999999999, 0.999999999999999, 1e-15, 1e-15, 0.999999999999999]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +299,7 @@
        "       -9.99200722e-16])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +319,7 @@
        "17.2696280766844"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -375,38 +354,13 @@
        "17.2696280766844"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "log_loss(y_true, y_predicted)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:purple'>Exercise</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Implement mean squared error (or MSE) in two ways,\n",
-    "\n",
-    "1) Without using numpy (i.e. using plain python)\n",
-    "\n",
-    "2) With the use of numpy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Solution](https://github.com/codebasics/deep-learning-keras-tf-tutorial/blob/main/5_loss/loss_function_exercise_solution.ipynb)"
    ]
   }
  ],
@@ -426,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
