--- a/imbalance-handling/customer_churn_prediction.ipynb
+++ b/imbalance-handling/customer_churn_prediction.ipynb
@@ -2989,6 +2989,314 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_class_1_over = df_class_1.sample(count_class_0, replace=True)\n",
+        "df_test_over = pd.concat([df_class_0, df_class_1_over], axis=0)\n",
+        "\n",
+        "print(df_test_over.Churn.value_counts())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1K_5ZEBSQ-EI",
+        "outputId": "2b539143-f3bc-46f2-a20c-5551e6cce364"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    5163\n",
+            "1    5163\n",
+            "Name: Churn, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df_test_over.drop('Churn',axis='columns')\n",
+        "y = df_test_over['Churn']\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=15, stratify=y)"
+      ],
+      "metadata": {
+        "id": "eN_Q6tKfRZGq"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train.value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g70k_sD-RcTb",
+        "outputId": "ddf03904-9a8a-4c74-9970-1b0ba64ddd71"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    4130\n",
+              "0    4130\n",
+              "Name: Churn, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss = keras.losses.BinaryCrossentropy()\n",
+        "weights = -1\n",
+        "y_preds = ANN(X_train, y_train, X_test, y_test, 'binary_crossentropy', -1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "582z1e-WRepn",
+        "outputId": "8353f7a1-3a94-441c-8d69-3743aa4f9ff7"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "259/259 [==============================] - 4s 6ms/step - loss: 0.5553 - accuracy: 0.7306\n",
+            "Epoch 2/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.4900 - accuracy: 0.7598\n",
+            "Epoch 3/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4815 - accuracy: 0.7639\n",
+            "Epoch 4/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4761 - accuracy: 0.7694\n",
+            "Epoch 5/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4716 - accuracy: 0.7695\n",
+            "Epoch 6/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4679 - accuracy: 0.7703\n",
+            "Epoch 7/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4663 - accuracy: 0.7723\n",
+            "Epoch 8/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4638 - accuracy: 0.7711\n",
+            "Epoch 9/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4612 - accuracy: 0.7766\n",
+            "Epoch 10/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4580 - accuracy: 0.7778\n",
+            "Epoch 11/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4555 - accuracy: 0.7797\n",
+            "Epoch 12/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4535 - accuracy: 0.7798\n",
+            "Epoch 13/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4518 - accuracy: 0.7803\n",
+            "Epoch 14/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.4502 - accuracy: 0.7822\n",
+            "Epoch 15/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.4474 - accuracy: 0.7814\n",
+            "Epoch 16/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4462 - accuracy: 0.7838\n",
+            "Epoch 17/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4438 - accuracy: 0.7858\n",
+            "Epoch 18/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4427 - accuracy: 0.7895\n",
+            "Epoch 19/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4402 - accuracy: 0.7893\n",
+            "Epoch 20/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4387 - accuracy: 0.7891\n",
+            "Epoch 21/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4378 - accuracy: 0.7885\n",
+            "Epoch 22/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4366 - accuracy: 0.7901\n",
+            "Epoch 23/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4342 - accuracy: 0.7926\n",
+            "Epoch 24/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4326 - accuracy: 0.7924\n",
+            "Epoch 25/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4310 - accuracy: 0.7933\n",
+            "Epoch 26/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4298 - accuracy: 0.7914\n",
+            "Epoch 27/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4277 - accuracy: 0.7947\n",
+            "Epoch 28/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.4262 - accuracy: 0.7929\n",
+            "Epoch 29/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.4257 - accuracy: 0.7970\n",
+            "Epoch 30/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4234 - accuracy: 0.7979\n",
+            "Epoch 31/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4224 - accuracy: 0.7962\n",
+            "Epoch 32/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4210 - accuracy: 0.7992\n",
+            "Epoch 33/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4208 - accuracy: 0.7975\n",
+            "Epoch 34/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4191 - accuracy: 0.8000\n",
+            "Epoch 35/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4175 - accuracy: 0.8039\n",
+            "Epoch 36/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4176 - accuracy: 0.8061\n",
+            "Epoch 37/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4156 - accuracy: 0.8011\n",
+            "Epoch 38/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4152 - accuracy: 0.8071\n",
+            "Epoch 39/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4128 - accuracy: 0.8050\n",
+            "Epoch 40/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4121 - accuracy: 0.8050\n",
+            "Epoch 41/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4104 - accuracy: 0.8063\n",
+            "Epoch 42/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.4094 - accuracy: 0.8085\n",
+            "Epoch 43/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.4093 - accuracy: 0.8046\n",
+            "Epoch 44/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4076 - accuracy: 0.8116\n",
+            "Epoch 45/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4056 - accuracy: 0.8134\n",
+            "Epoch 46/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4048 - accuracy: 0.8092\n",
+            "Epoch 47/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4060 - accuracy: 0.8104\n",
+            "Epoch 48/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4041 - accuracy: 0.8130\n",
+            "Epoch 49/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4032 - accuracy: 0.8107\n",
+            "Epoch 50/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4010 - accuracy: 0.8163\n",
+            "Epoch 51/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4009 - accuracy: 0.8162\n",
+            "Epoch 52/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.4002 - accuracy: 0.8123\n",
+            "Epoch 53/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3993 - accuracy: 0.8157\n",
+            "Epoch 54/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.3990 - accuracy: 0.8151\n",
+            "Epoch 55/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3996 - accuracy: 0.8161\n",
+            "Epoch 56/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.3987 - accuracy: 0.8168\n",
+            "Epoch 57/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.3959 - accuracy: 0.8184\n",
+            "Epoch 58/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3969 - accuracy: 0.8156\n",
+            "Epoch 59/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3952 - accuracy: 0.8190\n",
+            "Epoch 60/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3951 - accuracy: 0.8184\n",
+            "Epoch 61/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3932 - accuracy: 0.8197\n",
+            "Epoch 62/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3927 - accuracy: 0.8188\n",
+            "Epoch 63/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3912 - accuracy: 0.8213\n",
+            "Epoch 64/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3920 - accuracy: 0.8202\n",
+            "Epoch 65/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3922 - accuracy: 0.8212\n",
+            "Epoch 66/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3902 - accuracy: 0.8225\n",
+            "Epoch 67/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3901 - accuracy: 0.8200\n",
+            "Epoch 68/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3891 - accuracy: 0.8246\n",
+            "Epoch 69/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3887 - accuracy: 0.8247\n",
+            "Epoch 70/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.3875 - accuracy: 0.8246\n",
+            "Epoch 71/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.3871 - accuracy: 0.8259\n",
+            "Epoch 72/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3864 - accuracy: 0.8243\n",
+            "Epoch 73/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3854 - accuracy: 0.8247\n",
+            "Epoch 74/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3856 - accuracy: 0.8241\n",
+            "Epoch 75/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3840 - accuracy: 0.8266\n",
+            "Epoch 76/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3849 - accuracy: 0.8259\n",
+            "Epoch 77/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3830 - accuracy: 0.8264\n",
+            "Epoch 78/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3823 - accuracy: 0.8258\n",
+            "Epoch 79/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3821 - accuracy: 0.8264\n",
+            "Epoch 80/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3819 - accuracy: 0.8268\n",
+            "Epoch 81/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3818 - accuracy: 0.8289\n",
+            "Epoch 82/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3807 - accuracy: 0.8309\n",
+            "Epoch 83/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3798 - accuracy: 0.8291\n",
+            "Epoch 84/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.3797 - accuracy: 0.8305\n",
+            "Epoch 85/100\n",
+            "259/259 [==============================] - 1s 5ms/step - loss: 0.3776 - accuracy: 0.8331\n",
+            "Epoch 86/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3797 - accuracy: 0.8270\n",
+            "Epoch 87/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3783 - accuracy: 0.8301\n",
+            "Epoch 88/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3775 - accuracy: 0.8317\n",
+            "Epoch 89/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3778 - accuracy: 0.8301\n",
+            "Epoch 90/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3762 - accuracy: 0.8300\n",
+            "Epoch 91/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3779 - accuracy: 0.8314\n",
+            "Epoch 92/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3776 - accuracy: 0.8304\n",
+            "Epoch 93/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3759 - accuracy: 0.8303\n",
+            "Epoch 94/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3778 - accuracy: 0.8301\n",
+            "Epoch 95/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3737 - accuracy: 0.8341\n",
+            "Epoch 96/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3750 - accuracy: 0.8332\n",
+            "Epoch 97/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3735 - accuracy: 0.8334\n",
+            "Epoch 98/100\n",
+            "259/259 [==============================] - 2s 7ms/step - loss: 0.3728 - accuracy: 0.8333\n",
+            "Epoch 99/100\n",
+            "259/259 [==============================] - 1s 4ms/step - loss: 0.3725 - accuracy: 0.8334\n",
+            "Epoch 100/100\n",
+            "259/259 [==============================] - 1s 3ms/step - loss: 0.3715 - accuracy: 0.8345\n",
+            "65/65 [==============================] - 0s 2ms/step - loss: 0.4669 - accuracy: 0.7909\n",
+            "[0.46687597036361694, 0.7909002900123596]\n",
+            "65/65 [==============================] - 0s 1ms/step\n",
+            "Classification Report: \n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.84      0.72      0.77      1033\n",
+            "           1       0.75      0.87      0.81      1033\n",
+            "\n",
+            "    accuracy                           0.79      2066\n",
+            "   macro avg       0.80      0.79      0.79      2066\n",
+            "weighted avg       0.80      0.79      0.79      2066\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
